fix: adjust popup forms gap

--- a/sass/popup.module.sass
+++ b/sass/popup.module.sass
@@ -71,14 +71,15 @@ div.popup
         & form
             display: flex
             flex-direction: column
-            gap: 15px
+            gap: 10px
+            margin-top: 10px
             & label
                 display: flex
                 flex-direction: column
                 gap: 2px
                 text-align: left
-                font-size: 12px
-                font-weight: 700
+                font-size: 14px
+                font-weight: 600
                 text-transform: uppercase
                 & input
                     color: var(--font-st)
